# relago-support

./: .gitignore  .gitmodules  CHANGELOG.md  LICENSE  README.md  flake.nix  shell.nix  treefmt.toml
.github/workflows/: auto-sync.yml
client/: .gitignore  README.md  index.html  module.nix  package.json  package.nix  pnpm-lock.yaml  shell.nix
client/src/: App.tsx
server/: cabal.project  fourmolu.yaml  hie.yaml  module.nix  package.nix  relago-server.cabal  relago-server.nix  shell.nix
server/app/: Main.hs
server/src/: API.hs  Config.hs  Database.hs  S3.hs  Search.hs  Server.hs  State.hs  Worker.hs
server/src/API/: Keys.hs  Upload.hs  Util.hs
server/src/Database/: Reports.hs  Types.hs
server/src/Relago/: Prelude.hs
server/src/Search/: Reports.hs
