cabal-version:   3.0
name:            relago-server
version:         0.1.0.0
homepage:        https://github.com/xinux-org/relago-support
license:         AGPL-3.0-or-later
license-file:    LICENSE
author:          lambdajon
maintainer:      lambdajon42@gmail.com
category:        Network
build-type:      Simple
extra-doc-files: CHANGELOG.md

common warnings
  ghc-options: -Wall -threaded

library
  import:             warnings
  exposed-modules:
    API
    API.Keys
    API.Upload
    API.Util
    Config
    Database
    Database.Reports
    Database.Types
    Relago.Prelude
    Search
    Search.Reports
    Server
    State

  build-depends:
    , aeson
    , async
    , base
    , base64-bytestring
    , bloodhound
    , bytestring
    , containers
    , crypton-connection
    , data-default
    , directory
    , esqueleto
    , filepath
    , h-gpgme
    , http-client
    , http-client-tls
    , http-media
    , http-types
    , lens
    , monad-logger
    , mtl
    , optparse-generic
    , persistent
    , persistent-migration
    , persistent-postgresql
    , resource-pool
    , safe-exceptions
    , servant
    , servant-client
    , servant-multipart
    , servant-server
    , stm
    , text
    , time
    , tls
    , toml-parser
    , transformers
    , unliftio
    , utf8-string
    , vector
    , wai
    , wai-extra
    , warp
    , zip
    , zlib
    , uuid

  hs-source-dirs:     src
  default-language:   GHC2024
  default-extensions:
    BlockArguments
    DataKinds
    DeriveAnyClass
    DerivingStrategies
    ImplicitParams
    ImportQualifiedPost
    LambdaCase
    OverloadedRecordDot
    OverloadedStrings
    RecordWildCards

executable relago-server
  import:           warnings
  main-is:          Main.hs
  build-depends:
    , base
    , relago-server

  hs-source-dirs:   app
  default-language: GHC2024

test-suite relago-server-test
  import:           warnings
  default-language: GHC2024
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test
  main-is:          Main.hs
  build-depends:
    , base
    , relago-server
